sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:13: error: '<-' expected but ')' found.
		for (x>-getNombreValeurs()-2 to 0) {
                                                 ^AlgCocktailSort1:20: error: illegal start of simple expression
	}
        ^